simplified health check